fix topnav alignment

--- a/src/assets/css/components/_topnav.scss
+++ b/src/assets/css/components/_topnav.scss
@@ -127,15 +127,14 @@
     height: 48px;
     box-shadow: 0px 4px 6px 0px #00000040;
     .tab-container {
-      margin-left: 150px;
-      margin-right: 40px;
       display: flex;
       align-items: center;
+      justify-content: center;
+      gap: 40px;
       height: 100%;
       .tab {
         height: 100%;
         width: 120px;
-        margin-right: 50px;
         text-align: center;
         align-content: center;
         border-bottom: 4px solid variables.$brand-color1;
